# volatile

./: Cargo.toml  Changelog.md  README.md  Readme.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: build.yml
src/: access.rs  access_ptr.rs  cell.rs  foo.rs  lib.rs  macros.rs  ptr.rs  ptr_copy.rs  reference.rs  reference_mut.rs  tests.rs  volatile_ref.rs
src/ptr/: mod.rs  tests.rs  unstable.rs
src/ptr_copy/: mod.rs  tests.rs  unstable.rs  very_unstable.rs
src/ptr_send/: mod.rs  very_unstable.rs
src/volatile_ptr/: macros.rs  mod.rs  operations.rs  tests.rs  unstable.rs  very_unstable.rs
src/volatile_ref/: mod.rs  tests.rs
