[package]
name = "volatile"
version = "0.4.6"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
license = "MIT OR Apache-2.0"
keywords = ["volatile"]
description = "A simple volatile wrapper type"
documentation = "https://docs.rs/volatile"
repository = "https://github.com/rust-osdev/volatile"

[dependencies]

[features]
# Enable unstable features; requires Rust nightly; might break on compiler updates
unstable = []
# Enable unstable and experimental features; requires Rust nightly; might break on compiler updates
very_unstable = ["unstable"]

[dev-dependencies]
rand = "0.8.3"

[package.metadata.release]
dev-version = false
pre-release-replacements = [
    { file = "Changelog.md", search = "# Unreleased", replace = "# Unreleased\n\n# {{version}} – {{date}}", exactly = 1 },
]
pre-release-commit-message = "Release version {{version}}"

[package.metadata.docs.rs]
features = ["unstable"]
