[package]
name = "volatile"
version = "0.5.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
license = "MIT OR Apache-2.0"
keywords = ["volatile"]
description = "Volatile wrapper types for raw pointers"
documentation = "https://docs.rs/volatile"
repository = "https://github.com/rust-osdev/volatile"
edition = "2021"

[dependencies]

[features]
# Enable unstable features; requires Rust nightly; might break on compiler updates
unstable = []
# Enable unstable and experimental features; requires Rust nightly; might break on compiler updates
very_unstable = ["unstable"]

[dev-dependencies]
rand = "0.8.3"

[package.metadata.release]
pre-release-replacements = [
    { file = "Changelog.md", search = "# Unreleased", replace = "# Unreleased\n\n# {{version}} – {{date}}", exactly = 1 },
]
pre-release-commit-message = "Release version {{version}}"

[package.metadata.docs.rs]
features = ["unstable"]
